tests/paczka1/fuzzy1/32691757.err
Error in line 1: L4e S613 55,6
Error in line 6: IiX94cb S613 70,6
Error in line 2: YdiP9C8wO S391 80,0
Error in line 16: L4e A142 1,,7
Error in line 15: L4e A142 34,6
Error in line 7: IiX94cb A142 50,7
Error in line 18: L4e S613 63,0
Error in line 23: L4e S391 10,0
